@@ -443,9 +443,9 @@ Array
 *** Testing print_r() on float variables ***
 
 -- Iteration 1 --
-0
-0
-0
+-0
+-0
+-0
 -- Iteration 2 --
 0
 0
@@ -1606,7 +1606,7 @@ Array
 -- Iteration 4 --
 Array
 (
-    [0] => 0
+    [0] => -0
     [1] => Where am I?
     [2] => Array
         (
@@ -1622,7 +1622,7 @@ Array
 
 Array
 (
-    [0] => 0
+    [0] => -0
     [1] => Where am I?
     [2] => Array
         (
@@ -1638,7 +1638,7 @@ Array
 
 Array
 (
-    [0] => 0
+    [0] => -0
     [1] => Where am I?
     [2] => Array
         (
